draft 3 post 0014 (complete)

--- a/_posts/2021-03-13-post-0014.md
+++ b/_posts/2021-03-13-post-0014.md
@@ -4,7 +4,7 @@ description: "Learn everything you need to know on how to use Hydra in your mach
 layout: post
 toc: true
 comments: true
-hide: true
+hide: false
 search_exclude: true
 categories: [general]
 ---
@@ -13,7 +13,7 @@ categories: [general]
 
 In an effort to increase standardization across the PyTorch ecosystem Facebook AI in a recent [blog post](https://ai.facebook.com/blog/reengineering-facebook-ais-deep-learning-platforms-for-interoperability/) told that they would be leveraging Facebook's open source [Hydra framework](https://hydra.cc/) to handle configs, and also offer an integration with [PyTorch Lightning](https://www.pytorchlightning.ai/). This post is about Hydra.
 
-If you are reading this post then I assume that you are familiar with what are config files, why are they useful and how they increase reproducibility. And you also know what nightmare [argparse](https://docs.python.org/3/library/argparse.html) is. In general, with config files you can pass all the hyperparameters to your model, you can define all the global constants, define dataset splits and ... without touching the core code of your project.
+If you are reading this post then I assume you are familiar with what are config files, why are they useful and how they increase reproducibility. And you also know what nightmare is [argparse](https://docs.python.org/3/library/argparse.html). In general, with config files you can pass all the hyperparameters to your model, you can define all the global constants, define dataset splits and ... without touching the core code of your project.
 
 On [Hydra website](https://hydra.cc/docs/intro) the following are listed as the key features of Hydra
 * Hierarchical configuration composable from multiple sources
@@ -40,7 +40,7 @@ src
 
 Let's start with a simple example that will show you the main syntax of using Hydra,
 ```yaml
-### config.yaml
+### config/config.yaml
 
 batch_size: 10
 lr: 1e-4
@@ -54,20 +54,21 @@ import hydra
 from omegaconf import DictConfig
 
 @hydra.main(config_path="config", config_name="config")
-def main_func(cfg: DictConfig):
+def func(cfg: DictConfig):
     working_dir = os.getcwd()
-    print(f"The current working directory is {working_dir}\n")
+    print(f"The current working directory is {working_dir}")
 
     # To access elements of the config
     print(f"The batch size is {cfg.batch_size}")
     print(f"The learning rate is {cfg['lr']}")
 
 if __name__ == "__main__":
-    main_func()
+    func()
 ```
 
-Now when I run `python main.py` I get the following output
-```bash
+Running the script would give the following output
+```
+> python main.py    
 The current working directory is src/outputs/2021-03-13/16-22-21
 
 The batch size is 10
@@ -77,17 +78,17 @@ The learning rate is 0.0001
 > **Note**: The path is shortened to not include the complete path from root. Also, you can pass either `config.yaml` or `config` to `config_name`.
 
 A lot happened, let's parse it one by one.
-* `omegaconf` is installed by default with `hydra`. It is only used to provide the type annotation for `cfg` argument in `main_func`.
+* `omegaconf` is installed by default with `hydra`. It is only used to provide the type annotation for `cfg` argument in `func`.
 
 * `@hydra.main(config_path="config", config_name="config")` This is the main decorator function that is used when any function requires contents from a configuration file.
 
-* **Current working directory is changed**. `python main.py` executed the code in `src/` but the output shows the current working directory is `src/outputs/2021-03-13/16-22-21`. This is the most important point when using Hydra. An explanation follows below.
+* **Current working directory is changed**. `main.py` exists in `src/main.py` but the output shows the current working directory is `src/outputs/2021-03-13/16-22-21`. This is the most important point when using Hydra. An explanation follows below.
 
 ### How hydra handles different runs
-Whenever a program is executed using `python main.py` Hydra will create a new folder in `outputs` directory with the following naming scheme `outputs/YYYY-mm-dd/HH-MM-SS` i.e. the data and time at which the file was executed. Think about this for a second. Hydra provides you a way to maintain the logs of every run without you having to worry about it. 
+Whenever a program is executed using `python main.py` Hydra will create a new folder in `outputs` directory with the following naming scheme `outputs/YYYY-mm-dd/HH-MM-SS` i.e. the data and time at which the file was executed. Think about this for a second. Hydra provides you a way to maintain a log of every run without you having to worry about it. 
 
-In my case the directory structure looks like this after running `python main.py` (Let's not worry about the contents of each folder for now).
-```bash
+The directory structure after executing `python main.py` is (Let's not worry about the contents of each folder for now)
+```
 src
 ├── config
 │   └── config.yaml
@@ -121,10 +122,10 @@ Hydra provides two utility functions to handle this situation
     # path = src/test.txt
     ```
 
-Let's recap this using a short example. Let's say we want to read `src/test.txt` and write the output to `output.txt`.
+Let's recap this using a short example. Suppose we want to read `src/test.txt` and write the output to `output.txt`. The corresponding function to do this would be as shown below
 ```python
-@hydra.main(config_name="config/config.yaml")
-def main_func(cfg: DictConfig):
+@hydra.main(config_path="config", config_name="config")
+def func(cfg: DictConfig):
     orig_cwd = hydra.utils.get_original_cwd()
 
     # Read file
@@ -156,9 +157,9 @@ src
 └── test.txt
 ```
 
-> **Note**: Each `python main.py` is run in a new folder. To keep the above output short I removed all the subfolders of previous runs.
+The file was written to the folder created by hydra. This is a good way to save intermediate results when you are developing something. You can use this feature to save the accuracy results of your model with different hyperparameters. Now you do not have to spend time on manually saving the configuration file or the command line arguments you used to run the script and creating a new folder for each run to store the outputs. 
 
-The file was written to the folder created by hydra. This is a good way to save intermediate results when you are developing something. You can use this feature to save the accuracy results of your model with different hyperparameters. Now you do not have to spend time on manually saving the configuration file or the command line arguments to run the script and creating a new folder for each run to store the outputs. 
+> **Note**: Each `python main.py` is run in a new folder. To keep the above output short I removed all the subfolders of previous runs.
 
 The main point is use `orig_cwd = hydra.utils.get_original_cwd()` to get the original working directory path and then you do not have to worry about hydra running your code in different folder.
 
@@ -174,7 +175,7 @@ src/outputs/2021-03-13/17-14-24/
 ```
 
 * `config.yaml` - Copy of the config file passed to the function (It dosen't matter if you pass `foo.yaml`, this file would still be named `config.yaml`)
-* `hydra.yaml` - Copy of the hydra config file. We will see how to change some of the defaults used by hydra. (You can specify the message of `python main.py --help` here)
+* `hydra.yaml` - Copy of the hydra config file. We will later see how to change some of the defaults used by hydra. (You can specify the message of `python main.py --help` here)
 * `overrides.yaml` - Copy of any argument that you provide through command line and which changes one of the default value would be stored here
 * `main.log` - Output of logger would be stored here. (For `foo.py` this file would be named `foo.log`)
 
@@ -185,7 +186,7 @@ import logging
 
 log = logging.getLogger(__name__)
 
-@hydra.main(config_name="config/config.yaml")
+@hydra.main(config_path="config", config_name="config")
 def main_func(cfg: DictConfig):
     log.debug("Debug level message")
     log.info("Info level message")
@@ -193,13 +194,13 @@ def main_func(cfg: DictConfig):
 ```
 
 The log of `python main.py` in this case would be (in `main.log`)
-```python
+```
 [2021-03-13 17:36:06,493][__main__][INFO] - Info level message
 [2021-03-13 17:36:06,493][__main__][WARNING] - Warning level message
 ```
 
 If you want to include `DEBUG` also, then override `hydra.verbose=true` or `hydra.verbose=__main__` (i.e. `python main.py hydra.version=true`). The output in `main.log` in this case would be
-```python
+```
 [2021-03-13 17:36:38,425][__main__][DEBUG] - Debug level message
 [2021-03-13 17:36:38,425][__main__][INFO] - Info level message
 [2021-03-13 17:36:38,425][__main__][WARNING] - Warning level message
@@ -218,29 +219,30 @@ server:
 
 Now in `main.py` you can access the server address as follows
 ```python
-@hydra.main(config_name="config/config.yaml")
+@hydra.main(config_path="config", config_name="config")
 def main_func(cfg: DictConfig):
-    print(f"The server address = {cfg.server.address}")
+    server_address = cfg.server.address
+    print(f"The server address = {server_address}")
 
 
 # python main.py server.port=10
 # The server address = 127.0.0.1:10
 ```
 
-This syntax `address:${server.ip}` is very useful and we will later see use cases of this.
+As you can guess from the above example, if you want some variable to take the same value as another variable you should use the following syntax `address:${server.ip}`. We will later see some interesting use cases of this.    
 
 ## Using Hydra for ML projects
-Now you know the basic working's of hydra, we can focus on using Hydra to develop a machine learning project. Go through the hydra [documentation](https://hydra.cc/docs/intro) after this post for some of the minor details not discussed in this post. And I do not discuss *[Structured Configs](https://hydra.cc/docs/tutorials/structured_config/intro)* (alternate to yaml files) in this post as you can get everything done without them also.
+Now you know the basic working's of hydra, we can focus on using Hydra to develop a machine learning project. Check the hydra [documentation](https://hydra.cc/docs/intro) after this post for some of the things not discussed here. And I do not discuss *[Structured Configs](https://hydra.cc/docs/tutorials/structured_config/intro)* (alternate to yaml files) in this post as you can get everything done without them also.
 
-The `src` directory of our project will usually have the following structure
-```bash
+Recall, the `src` directory of our project has the following structure
+```
 src
 ├── config
 │   └── config.yaml
 └── main.py
 ```
 
-We have a separate folder to store all our config files (`config`) and the source code of our project (`main.py` in this case). Now let's get started.
+We have a separate folder to store all our config files (`config`) and the source code of our project is `main.py`. Now let's get started.
 
 ### Dataset
 Every ML project begins by collecting data and creating a dataset. When working on an image classification project, we use many different datasets like ImageNet, CIFAR10, and more. And each of these datasets will have different hyperparameters associated with them like batch size, the size of input images, the number of classes, the number of layers of the model to use for a particular dataset and many more.
@@ -248,13 +250,13 @@ Every ML project begins by collecting data and creating a dataset. When working 
 Instead of using a particular dataset, I use a random dataset as it would make the things general and you can apply the things discussed here on your own datasets. Also, let's not worry about creating dataloaders, as they are the same thing. 
 
 Before discussing the details, let me show you the code and you can easily guess what is happening. The 4 files involved in this example are
-- `src/dataset.py`
+- `src/main.py`
 - `src/config/config.yaml`
 - `src/config/dataset/dataset1.yaml`
 - `src/config/dataset/dataset2.yaml`
 
 ```python
-### src/dataset.py ###
+### src/main.py ###
 
 import torch
 import hydra
@@ -312,8 +314,9 @@ dim2: 20
 ```
 
 To be honest this is pretty much everything you need to use hydra in your projects. Let us see what is actually happening in the above code
-- In `src/dataset.py`, you will see that there are some common variables, namely `cfg.dataset` and `cfg.num_samples` that are shared across all the datasets. These are defined in our main config file that we pass to hydra using the command `@hydra.main(...)`.
+- In `src/main.py`, you will see that there are some common variables, namely `cfg.dataset` and `cfg.num_samples` that are shared across all the datasets. These are defined in our main config file that we pass to hydra using the command `@hydra.main(...)`.
 - Next, we need to define some variables specific to every dataset (like number of classes in ImageNet and CIFAR10). To achieve this in hydra, we use the following syntax
+    
     ```yaml
     defaults:
       - dataset: dataset1
@@ -331,9 +334,11 @@ To be honest this is pretty much everything you need to use hydra in your projec
     And that is it. Now you can define the variables specific to your every dataset in each of the above files, independent of each other.
 - These are called [config groups](https://hydra.cc/docs/tutorials/basic/your_first_app/config_groups). Every config file is independent of other config files in the folder and we can only choose one of the config files. To define these config groups you need to include a special comment at the beginning of every file `# @package _group_`.
 
-> **Note**: In Hydra 1.1, `_group_` will become the default `package` and there will be no need to add that special comment.
+> We can only choose one config file out of `dataset1.yaml` and `dataset2.yaml` as the value of `dataset`. And to tell hydra that these are config groups, we need to include the special comment `# @package _group_` at the start of these files.
 
-- What is **defaults**? In our main config file we need some way to distinguish normal string values from config group values. Like in this case, we want `dataset1` to be interpreted as a config group value rather than a string value. To do this we define all the config groups in `defaults`. And as you guessed it you provide a default value to it. 
+> **Note**: In Hydra 1.1, `_group_` will become the default `package` and there will be no need to add the special comment.
+
+- What is **defaults**? In our main config file we need some way to distinguish normal string values from config group values. Like in this case, we want `dataset: dataset1` to be interpreted as a config group value rather than a string value. To do this we define all the config groups in `defaults`. And as you guessed it you provide a default value to it. 
     ```yaml
     defaults:
       - dataset: dataset1 # By default use `dataset/dataset1.yaml
@@ -347,13 +352,13 @@ To be honest this is pretty much everything you need to use hydra in your projec
 > **Note**: `defaults` takes a list as input, so you need to start every name with a `-`.
 
 We can check the output for the above code.
-```python
-❯ python dataset.py
+```
+> python dataset.py
 torch.Size([2, 5])
 ```
 and
-```python
-❯ python dataset.py dataset=dataset2
+```
+> python dataset.py dataset=dataset2
 torch.Size([2, 10, 20])
 ```
 
@@ -363,19 +368,31 @@ defaults:
   - dataset: dataset1
   - optimizer: adam
 ```
-and you use this to also create config files for learning rate schedulers, models, evaluation metrics and almost everything else without having to actually hard code any of these values in the main codebase. You no longer need to remember which learning rate you used to run that model, as a backup of the config file used to run the python script is always stored in the folder.
+and you use this to also create config files for learning rate schedulers, models, evaluation metrics and almost everything else without having to actually hard code any of these values in the main codebase. You no longer need to remember which learning rate you used to run that model, as a backup of the config file used to run the python script is always stored in the folder created by hydra.
 
 ### Model
-There is one special case that you also need to know. What if you want your resnet model to have different number of layers when using ImageNet vs CIFAR10. The naive solution would be to add `if-else` conditions in your model definition for every dataset, but that is a bad choice. What if tomorrow you add a new dataset. Now you would have to modify your model `if-else` condition to handle this new dataset. So instead we define a value `num_layers` in the config file and then we can use this value to create how every many layers we want. How to do so, is the next question?
+There is one special case that you also need to know. What if you want your ResNet model to have different number of layers when using ImageNet vs CIFAR10. The naive solution would be to add `if-else` conditions in your model definition for every dataset, but that is a bad choice. What if tomorrow you add a new dataset. Now you would have to modify your model `if-else` condition to handle this new dataset. So instead we define a value `num_layers` in the config file and then we can use this value to create how every many layers we want.
 
-Suppose you want your resnet model to have 34 layers when using CIFAR10 and 50 layers for every other dataset. In this case the `config/model/resnet.yaml` file would be
+Suppose we use two models, resnet and vgg. Based on the discussion in previous topic, we would have a separate config file for each model. The directory structure of the `config` folder would be
+```
+config
+├── config.yaml
+├── dataset
+│   ├── cifar10.yaml
+│   └── imagenet.yaml
+└── model
+    ├── resnet.yaml
+    └── vgg.yaml
+```
+
+Now suppose we want the resnet model to have 34 layers when using CIFAR10 and 50 layers for every other dataset. In this case the `config/model/resnet.yaml` file would be
 ```yaml
 # @package _group_
 name: resnet
-num_layers: 10
+num_layers: 50 # As 50 is the default value
 ```
 
-Now we want to set the value `num_layers=34` when the user specifies CIFAR10 dataset. To do this we define a new config group and create a separate config file for our special case there. In the main `config/config.yaml` we would make the following changes
+Now we want to set the value `num_layers=34` when the user specifies CIFAR10 dataset. To do this we can define a new config group in which we can define all the combinations of the special cases. In the main `config/config.yaml` we would make the following changes
 ```yaml
 defaults:
   - dataset: imagenet
@@ -384,7 +401,7 @@ defaults:
     optional: true
 ```
 
-Here we created a new config group named `dataset_model` that takes the value specified by `dataset` and `model`. This is some weird syntax as `defaults` is a list, so you need to specify index before the name i.e. `defaults.0.dataset`. Now we can define the config file in `dataset_model/cifar10_resnet.py`
+Here we created a new config group named `dataset_model` that takes the value specified by `dataset` and `model` (like `imagenet_resnet`, `cifar10_resnet`). This is some weird syntax as `defaults` is a list, so you need to specify index before the name i.e. `defaults.0.dataset`. Now we can define the config file in `dataset_model/cifar10_resnet.py`
 ```yaml
 # @package _global_
 model:
@@ -393,38 +410,38 @@ model:
 
 > **Note**: Here we used `# @package _global_` instead of `# @package _group_`.
 
-We can test the code as follows
+We can test the code as follows, where we simply print out the number of features returned by the config file
 ```python
 @hydra.main(config_path="config", config_name="config")
 def main_func(cfg: DictConfig):
     print(f"Num features = {cfg.model.num_layers}")
 ```
 
-```python
-❯ python main.py dataset=imagenet
+```
+> python main.py dataset=imagenet
 Num features = 50
 
-❯ python main.py dataset=cifar10
+> python main.py dataset=cifar10
 Num features = 34
 ```
 
-We have to specify `optional: true`, as without it we would need to specify all combinations of `dataset` and `model`. 
+We have to specify `optional: true`, as without it we would need to specify all combinations of `dataset` and `model` (if a user enters a value of `dataset` and `model` such that we have no config file for that option, then Hydra will throw an error for missing config file). 
 
-Check the [documentation](https://hydra.cc/docs/patterns/specializing_config) of this topic.
+[documentation](https://hydra.cc/docs/patterns/specializing_config) of this topic.
 
-I hope this helps you with integrating Hydra in your projects. In terms of creating config files and using them in your project this is all you need to know.
+The rest of the process is same, create separate config groups for optimizer, learning rate scheduler, callbacks, evaluation metrics, losses, training scripts. In terms of creating config files and using them in your project this is all you need to know.
 
 ## Random things
 
 ### Show config file
-Prints the config file without running the function. Usage `--cfg [OPTION]` Valid `OPTION` are
+Prints the config file that is being passed to a function without running the function. Usage `--cfg [OPTION]` Valid `OPTION` are
 - `job`: Your config file
 - `hydra`: Hydra's config
 - `all` : `job` + `hydra`
 
 This is useful for quick debugging when you want to check what is being passed to a function. Example,
-```python
-❯ python main.py --cfg job
+```
+> python main.py --cfg job
 # @package _global_
 num_samples: 2
 dataset:
@@ -442,7 +459,7 @@ This is a very useful feature of hydra. Check the [docs](https://hydra.cc/docs/t
 [2021-03-15 04:18:58,275][HYDRA]        #3 : lr=0.01 wd=0.01
 ```
 
-Hydra will run your script with all combinations of `lr` and `wd`. The output will be stored in a new folder called `multirun`. This folder also follows the same syntax of storing the contents in a date and time subfolder. The directory structure is shown below
+Hydra will run your script with all combinations of `lr` and `wd`. The output will be stored in a new folder called `multirun` (instead of `outputs`). This folder also follows the same syntax of storing the contents in a date and time subfolder. The directory structure after running the above command is shown below
 ```bash
 multirun
 └── 2021-03-15
@@ -462,9 +479,9 @@ multirun
         └── multirun.yaml
 ```
 
-It is same as `outputs` except four folders are created here for the run instead of one. You can check the [documentation](https://hydra.cc/docs/tutorials/basic/running_your_app/multi-run) on different ways of specifying the value to run the script on (these are called *sweeps*).
+It is same as `outputs` except four folders are created here for the run instead of one. You can check the [documentation](https://hydra.cc/docs/tutorials/basic/running_your_app/multi-run) on different ways of specifying the value of the variables to run the script on (these are called *sweeps*).
 
-Also, note this would run your script locally and sequentially. If you want to run your script in parallel across multiple nodes or run it on AWS, you can check the documentation for the following plugins
+Also, this would run your script locally and sequentially. If you want to run your script in parallel across multiple nodes or run it on AWS, you can check the documentation for the following plugins
 - [Joblib](https://hydra.cc/docs/plugins/joblib_launcher) - Uses [Joblib.Parallel](https://joblib.readthedocs.io/en/latest/parallel.html)
 - [Ray](https://hydra.cc/docs/plugins/ray_launcher) - Run jobs on aws cluster or local cluster
 - [RQ](https://hydra.cc/docs/plugins/rq_launcher)
@@ -493,7 +510,7 @@ hydra:
       'This is the help message'
 ```
 ```
-❯ python main.py --help
+> python main.py --help
 This is the help message
 ```
 
@@ -509,3 +526,5 @@ python main.py lr=1e-2,1e-3 hydra.sweep.dir=multirun/my_run -m
 ---
 
 That would be it for today. Hope this helps you in using Hydra in your projects.
+
+[twitter](https://twitter.com/Kkushaj), [linkedin](https://www.linkedin.com/in/kushaj/), [github](https://github.com/KushajveerSingh)
