--- a/_posts/2021-03-16-post-0014.md
+++ b/_posts/2021-03-16-post-0014.md
@@ -171,7 +171,7 @@ src/outputs/2021-03-13/17-14-24/
 │   ├── config.yaml
 │   ├── hydra.yaml
 │   └── overrides.yaml
-├── main.log
+└── main.log
 ```
 
 * `config.yaml` - Copy of the config file passed to the function (It dosen't matter if you pass `foo.yaml`, this file would still be named `config.yaml`)
