--- a/_posts/2020-11-07-post-0013.md
+++ b/_posts/2020-11-07-post-0013.md
@@ -6,7 +6,7 @@ toc: true
 comments: true
 hide: false
 search_exclude: true
-categories: [graph_machine_learning]
+categories: [graph]
 ---
 
 [paper](https://arxiv.org/abs/1905.13211), [my implementation](https://github.com/KushajveerSingh/deep_learning/tree/master/graph_machine_learning/what_can_neural_networks_reason_about)
